@@ -741,6 +741,16 @@ device comment.
 If set to C<yes>, the corresponding statistics are excluded from Cisco SCE
 graphs.
 
+=item * C<FTOS::disable-cpu>, C<FTOS::disable-power>,
+    C<FTOS::disable-temperature>
+
+When set to C<yes>, disables the corresponding statistics category.
+
+=item * C<FTOS::use-fahrenheit>, C<FTOS::file-per-sensor>
+
+When set to C<yes>, enables the user of fahrenheit temperature, or writes
+multiple rrd files.
+
 =item * C<JunOS::disable-cos>, C<JunOS::disable-cos-red>,
     C<JunOS::disable-cos-tail>, C<JunOS::disable-firewall>,
     C<JunOS::disable-operating>, C<JunOS::disable-rpf>
