@@ -45,6 +45,7 @@ dist_vendor_DATA = \
 	vendor/empire.systemedge.xml \
 	vendor/empire.systemedge.ntregperf.xml \
 	vendor/f5.bigip.xml \
+	vendor/ftos.xml \
 	vendor/junos.xml \
 	vendor/hp.hpux.xml \
 	vendor/liebert.xml \
